<resources>
    <string name="app_name">instaDAM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="añadirPublic">AÑADE UNA PUBLICACION</string>
    <string name="buscarPublic">BUSCAR UN USUARIO</string>
    <string name="inicio">Inicio</string>
    <string name="INICIO">INICIO</string>
    <string name="buscar">Buscar</string>
    <string name="publicar">Publicar</string>
    <string name="tituloInput">Título</string>
    <string name="imagenInput">Imagen</string>
    <string name="usuarioInput">Introduce el nombre de usuario: </string>
    <string name="nombreUsuarioInput">Nombre de usuario </string>
    <string name="emailUsuarioInput">Email de usuario </string>
    <string name="ubiInput">Ubicación</string>
    <string name="publicarButton">Publicar</string>
    <string name="tituloPublic">Título publicación</string>
    <string name="imagenPublic">Imagen publicación</string>
    <string name="ubicPublic">Ubicación publicación</string>
    <string name="descripPublic">Descripción publicación</string>
    <string name="modoPublic">Compartir publica o sólo con amigos</string>
    <string name="publica">Pública</string>
    <string name="amigos">Solo amigos</string>
    <string name="ajustes">AJUSTES</string>
    <string name="datosUsuario">Datos usuario:</string>
    <string name="nuevoNombreUsuario">Introduce un nuevo nombre de usuario:</string>
    <string name="nuevoEmailUsuario">Introduce un nuevo email de usuario:</string>
    <string name="actualizar">Actualizar</string>



</resources>